# Rekaptr

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  FEATURE_ROADMAP.md  HANDOFF.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  UI_POLISH.md  build.rs  dist-workspace.toml  dist.ps1  get_plan.sh  installer.iss  patch.diff  plan.md  test_plan.sh  v0.2.0-stability.md
.Jules/: bolt.md  palette.md
.cargo/: config.toml
.jules/: bolt.md
assets/: steam_top500.json
backups/10am-15th/src/: audio.rs  config.rs  db.rs  engine.rs  main.rs  segment_verify.rs  server.rs  tray.rs
backups/10pm-18th/src/: config.rs  engine.rs  main.rs  state.rs  utils.rs  virtual_audio_router.rs
backups/10pm/src/: engine.rs  main.rs  state.rs  utils.rs
backups/11am-17th/src/: audio.rs  config.rs  engine.rs  main.rs  state.rs  utils.rs  virtual_audio_router.rs
backups/11pm-2/src/: audio.rs  config.rs  game_detector.rs
backups/11pm/src/: state.rs  utils.rs
backups/12am/src/: audio.rs  config.rs  engine.rs  main.rs  state.rs  utils.rs
backups/12pm-7th/src/: engine.rs  main.rs  utils.rs
backups/1pm-7th/src/: db.rs  utils.rs
backups/1pm-8th/src/: engine.rs  utils.rs
backups/1st-9am/src/: engine.rs  game_detector.rs  main.rs  state.rs  utils.rs
backups/27th-5pm/src/: audio.rs  engine.rs  main.rs  utils.rs
backups/27th-6pm/src/: state.rs
backups/2pm-8th/src/: engine.rs
backups/3pm-12th/src/: config.rs  db.rs  engine.rs  main.rs  utils.rs
backups/3rd-11pm/src/: main.rs  utils.rs
backups/3rd-5pm/src/: audio.rs  config.rs  engine.rs  state.rs  utils.rs
backups/5pm-12th/src/: main.rs
backups/5pm/src/: utils.rs
backups/6pm/src/: main.rs
backups/7am-10th/src/: main.rs  state.rs
backups/7am-18th/src/: config.rs  engine.rs  game_detector.rs  main.rs  state.rs
backups/src/: state.rs  utils.rs
components/: Cargo.toml
components/examples/: accordion.rs  avatar.rs  badge.rs  button.rs  card.rs  checkbox.rs  chip.rs  color_swatch_picker.rs  divider.rs  dropdown.rs  empty_state.rs  form_field.rs  hotkey_capture.rs  icon_button.rs  labeled_value.rs  letter_avatar.rs  modal.rs  modal_shell.rs  number_input.rs  progress_bar.rs  radio_group.rs  rail_item.rs  section_heading.rs  settings_card.rs  settings_row.rs  slider_horizontal.rs  slider_vertical.rs  spinner.rs  stat_strip.rs  stepper.rs  tabs.rs  text_input.rs  timeline_scrubber.rs  toast.rs  toggle.rs  toggle_row.rs  toolbar.rs  tooltip.rs  volume_meter.rs
components/src/: lib.rs  preview.rs
crates/gpui/: Cargo.toml  README.md  build.rs
crates/rekaptr-rsx/: Cargo.toml
docs/: 1.0-roadmap.md  main-thread-freeze-postmortem.md
mockups/: README.md  add_source_redesign_mockup.rs  clips_redesign_mockup.rs  control_bar_mockup.rs  dashboard.rs  draft_editor_mockup.rs  export_redesign_mockup.rs  game_settings_mockup.rs  memory_stress_test.rs  mock_dashboard.rs  overlay_mockup.rs  settings_redesign_mockup.rs  settings_select_test.rs  synthetic_soak_test.rs  timeline_mixer_mockup.rs  volume_slider_test.rs
roadmap/: FEATURE_BRAINSTORMING.md  FEATURE_DRAFT_SOUNDBOARD.md  OPTIMIZATIONS_0.2.0.md  REKAPTR_10_OUT_OF_10_PLAN.md  RENAME_TO_REKAPTR.md  v0.2.0-stability.md  v0.3.0-reliability.md  v0.4.0-performance.md  v0.5.0-polish.md  v0.6.0-audio.md  v0.7.0-recording-features.md  v0.8.0-export-sharing.md  v0.9.0-ecosystem.md  v1.0.0-release.md
scripts/: build-release.ps1  fetch-steam-top500.ps1  rekaptr-installer.ps1.template
src/: audio.rs  config.rs  db.rs  engine.rs  game_catalog.rs  game_detector.rs  hotkeys.rs  main.rs  mic_dsp.rs  migration.rs  overlay.rs  state.rs  updater.rs  utils.rs  virtual_audio_router.rs
src/cloud/: api.rs  auth.rs  mod.rs  upload.rs
src/core/: export.rs  mod.rs  recording.rs
src/ui/: add_source.rs  clips.rs  dashboard.rs  dashboard.rs.orig  export.rs  mod.rs  recording.rs  select.rs  sessions.rs  settings.rs  setup_wizard.rs  shared.rs  sidebar.rs  teams.rs  timeline.rs  volume_slider.rs
src/utils/: clips_index.rs  mod.rs  paths.rs  playlist.rs  retention.rs  segments.rs  startup.rs  steam_assets.rs
src/video_player/: element.rs  error.rs  mod.rs  video.rs  window_helper.rs
(+1251 files in other folders)
