[package]
name = "rekaptr"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/Sierra8953/Rekaptr"
authors = ["Sierra8953"]

[dependencies]
gpui = { path = "crates/gpui", package = "adabraka-gpui" }
adabraka-ui = { version = "0.3", features = ["http"] }
libmpv2 = "5.0"
libmpv2-sys = "4.0"
gstreamer = "0.25"
gstreamer-app = "0.25"
gstreamer-video = "0.25"
gstreamer-base = "0.25"
glib = "0.22"
sysinfo = "0.30"
tray-icon = "0.19"
parking_lot = "0.12"
mimalloc = { version = "0.1", default-features = false }
anyhow = "1.0"
chrono = "0.4"
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_System_Com", "Win32_Graphics_Dxgi", "Win32_Graphics", "Win32_Graphics_Direct3D11", "Win32_Graphics_Direct3D_Fxc", "Win32_Graphics_DirectComposition", "Win32_Graphics_Direct2D", "Win32_Graphics_Direct2D_Common", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_OpenGL", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_Storage_FileSystem", "Win32_System_Kernel", "Win32_System_Memory", "Win32_UI_Accessibility", "Win32_UI_Shell", "Win32_UI_Input_KeyboardAndMouse"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
image = "0.25"
ico = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
winreg = "0.52"
regex = "1.10"
once_cell = "1.18"
notify = "6.1"
wasapi = "0.22.0"
url = "2.5"
thiserror = "1.0"
smallvec = "1.13"
log = "0.4"
gpui-component = "0.5.1"
rand = "0.10.0"
sha2 = "0.10"
keyring = { version = "3", features = ["windows-native"] }
futures-util = "0.3"
ringbuf = "0.4.8"
winapi = "0.3.9"
env_logger = "0.11.9"
rfd = "0.15"
axoupdater = { version = "0.10", features = ["blocking"] }

[[example]]
name = "dashboard_mockup"
path = "mockups/dashboard.rs"

[[example]]
name = "dashboard_refined_mockup"
path = "mockups/dashboard_refined.rs"

[[example]]
name = "dashboard_slate_mockup"
path = "mockups/dashboard_slate.rs"

[[example]]
name = "dashboard_cinematic_mockup"
path = "mockups/dashboard_cinematic.rs"

[[example]]
name = "dashboard_command_mockup"
path = "mockups/dashboard_command.rs"

[[example]]
name = "dashboard_timeline_mockup"
path = "mockups/dashboard_timeline.rs"

[[example]]
name = "game_settings_mockup"
path = "mockups/game_settings_mockup.rs"

[[example]]
name = "export_redesign_mockup"
path = "mockups/export_redesign_mockup.rs"

[[example]]
name = "overlay_mockup"
path = "mockups/overlay_mockup.rs"

[[example]]
name = "teams_mockup"
path = "mockups/teams_mockup.rs"

[dev-dependencies]
# Local JSX-flavored macro, used only by the rsx! UI mockups in `mockups/`.
rekaptr-rsx = { path = "crates/rekaptr-rsx" }

[build-dependencies]
winresource = "0.1"
image = "0.25"
ico = "0.4"

[patch.crates-io]
gpui = { path = "crates/gpui", package = "adabraka-gpui" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
