[workspace]
# Empty workspace block makes this its own workspace root so cargo
# does not try to merge with the parent rekaptr manifest.

[package]
name = "components"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone playground for designing and iterating on UI components.
# Completely independent from the main rekaptr app — uses the same
# gpui + adabraka-ui stack so finished components can be ported over.
#
# Add a new component by creating `examples/<name>.rs`, then run:
#   cargo run --example <name>

[dependencies]
gpui = { path = "../crates/gpui", package = "adabraka-gpui" }
adabraka-ui = { version = "0.3", features = ["http"] }
gpui-component = "0.5.1"
anyhow = "1.0"
smallvec = "1.13"

[patch.crates-io]
gpui = { path = "../crates/gpui", package = "adabraka-gpui" }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
